{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 35,
  "lineage": "08965b00-3fbe-b461-4928-67ef58f5ea22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0474e70c56955a787",
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:elastic-ip/eipalloc-0474e70c56955a787",
            "association_id": "eipassoc-06f9e0eed477f88be",
            "domain": "vpc",
            "id": "eipalloc-0474e70c56955a787",
            "instance": "i-0abffc8d5dc075d59",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0149398ce426054a6",
            "private_dns": "ip-10-0-1-22.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-15-134-175-175.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "15.134.175.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "clinical-etl-prod-api-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-api-eip",
              "Project": "clinical-etl"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e5be36bf4f45d3d",
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:instance/i-0abffc8d5dc075d59",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "clinical-etl-prod-ec2-profile-beb9bc88",
            "id": "i-0abffc8d5dc075d59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0149398ce426054a6",
            "private_dns": "ip-10-0-1-22.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-15-134-175-175.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "15.134.175.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "terraform",
                  "Project": "clinical-etl"
                },
                "throughput": 125,
                "volume_id": "vol-066499adbf2128127",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4cc5a319cbc9c7e",
            "tags": {
              "Name": "clinical-etl-prod-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-api",
              "Project": "clinical-etl"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b2d5a7a43a49ed5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.main",
            "aws_eip.api",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2_s3_role",
            "aws_s3_bucket.raw_data",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:internet-gateway/igw-0168d7257df402baf",
            "id": "igw-0168d7257df402baf",
            "owner_id": "910599465580",
            "tags": {
              "Name": "clinical-etl-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-igw",
              "Project": "clinical-etl"
            },
            "vpc_id": "vpc-09328523f99d78f8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:route-table/rtb-0d91ef9cb1562bea9",
            "id": "rtb-0d91ef9cb1562bea9",
            "owner_id": "910599465580",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0168d7257df402baf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "clinical-etl-prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-public-rt",
              "Project": "clinical-etl"
            },
            "timeouts": null,
            "vpc_id": "vpc-09328523f99d78f8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aac6f412954709e3",
            "route_table_id": "rtb-0d91ef9cb1562bea9",
            "subnet_id": "subnet-0f4cc5a319cbc9c7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f14051a97e8f968",
            "route_table_id": "rtb-0d91ef9cb1562bea9",
            "subnet_id": "subnet-0de57d8fec20a33ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:security-group/sg-01b2d5a7a43a49ed5",
            "description": "Clinical ETL API server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b2d5a7a43a49ed5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "FastAPI",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (for ALB / health check)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Next.js frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clinical-etl-prod-ec2-sg",
            "name_prefix": "",
            "owner_id": "910599465580",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clinical-etl-prod-ec2-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-ec2-sg",
              "Project": "clinical-etl"
            },
            "timeouts": null,
            "vpc_id": "vpc-09328523f99d78f8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:security-group/sg-0afdfd2c0e9b54e66",
            "description": "PostgreSQL - only accessible from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afdfd2c0e9b54e66",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b2d5a7a43a49ed5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "clinical-etl-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "910599465580",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clinical-etl-prod-rds-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-rds-sg",
              "Project": "clinical-etl"
            },
            "timeouts": null,
            "vpc_id": "vpc-09328523f99d78f8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:subnet/subnet-0439e66d846f3c415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0439e66d846f3c415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910599465580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clinical-etl-prod-private-a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-private-a",
              "Project": "clinical-etl"
            },
            "vpc_id": "vpc-09328523f99d78f8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:subnet/subnet-075920302ab9d0c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075920302ab9d0c4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910599465580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clinical-etl-prod-private-b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-private-b",
              "Project": "clinical-etl"
            },
            "vpc_id": "vpc-09328523f99d78f8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:subnet/subnet-0f4cc5a319cbc9c7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4cc5a319cbc9c7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910599465580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clinical-etl-prod-public-a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-public-a",
              "Project": "clinical-etl"
            },
            "vpc_id": "vpc-09328523f99d78f8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:subnet/subnet-0de57d8fec20a33ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de57d8fec20a33ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910599465580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clinical-etl-prod-public-b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-public-b",
              "Project": "clinical-etl"
            },
            "vpc_id": "vpc-09328523f99d78f8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:910599465580:vpc/vpc-09328523f99d78f8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093e764b3a26b2c13",
            "default_route_table_id": "rtb-0d5327c9db1af05c3",
            "default_security_group_id": "sg-0b3fc70ff421161be",
            "dhcp_options_id": "dopt-0eefb98d1146ad4b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09328523f99d78f8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5327c9db1af05c3",
            "owner_id": "910599465580",
            "tags": {
              "Name": "clinical-etl-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clinical-etl-prod-vpc",
              "Project": "clinical-etl"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}